--- a/src/app/pagina-inicial/pagina-inicial.component.css
+++ b/src/app/pagina-inicial/pagina-inicial.component.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 * {
     margin: 0;
     padding: 0;
@@ -57,27 +56,6 @@
     color: white;
 }
 
-.cursos-container .img-cursos img {
-    max-width: 500px;
-}
-
-.cursos-container .lista-cursos {
-    max-height: 300px;
-}
-
-.cursos-container .lista-cursos h3 {
-    margin-bottom: 20px;
-}
-
-.cursos-container .lista-cursos h4 {
-    font-weight: bold;
-}
-
-.cursos-container .lista-cursos ul {
-    margin-bottom: 30px;
-    margin-top: 15px;
-}
-
 .contato-container {
     display: flex;
     align-items: center;
@@ -110,59 +88,63 @@
     color: rgb(78, 155, 255);
 }
 
-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: rgb(78, 155, 255);
-    color: white;
-    height: 50px;
-}
+/* Media queries */
 
-footer ul {
-    display: flex;
-}
+@media (max-width: 1024px) {
+    .bem-vindo-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 0px 25px 50px 25px;
+    }
 
-footer ul li a{
-    display: flex;
-    margin: 10px;   
-    color: #fff;
-}
+    .bem-vindo-container .img-bem-vindo img {
+        max-width: 150px;
+    }
 
-.pagina-contato-container {
-    display: flex;
-    height: 810px;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(235, 244, 255);
-}
+    .quem-sou-eu-container {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;     
+        padding: 0px 25px 80px 25px;
+    }
 
-.pagina-contato-container .info-contatos {
-    display: flex;
-    flex-direction: column;
-}
+    .quem-sou-eu-container .texto-quem-sou-eu {
+        text-align: center;
+    }
 
-.pagina-contato-container .info-contatos div {
-    margin: 10px;
-}
+    .quem-sou-eu-container .img-quem-sou-eu img {
+        max-width: 150px;
+    }
 
-.texto-contatos h2 {
-    margin-bottom: 20px;
-}
+    .cursos-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        text-align: center;  
+        height: 700px;
+        padding: 25px;
+    }
 
-.botao-contatos ul {
-    display: flex;
-    justify-content: space-around;
-}
+    .cursos-container .img-cursos img {
+        max-width: 250px;
+        margin: 0px;
+    }
 
-.botao-contatos ul li a{
-    background-color: rgb(78, 155, 255);
-    color: white;
-    border-radius: 30px;
-    padding: 5px 15px 5px 15px;
-}
+    .contato-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        text-align: center;  
+        height: 500px;
+        padding: 25px;
+    }
 
-.botao-contatos ul li a:hover {
-    background-color: white;
-    color: rgb(78, 155, 255);
+    .contato-container .img-contato img {
+        max-width: 250px;
+    }
+
 }
