--- a/src/app/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/pagina-inicial/pagina-inicial.component.html
@@ -35,7 +35,7 @@
     <div class="texto-contato">
         <h3>Quer falar comigo?</h3>
         <p>
-            Se quiser falar comigo, ou saber minhas redes socias,
+            Se quiser falar comigo, ou saber minhas redes sociais,
             é só clicar nesse botão.
         </p>
         <a routerLink="/contato">contato</a>
