Adiciona página de projetos

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="fixa-footer">
     <div class="texto-footer">
         <p>
             desenvolvido por: Kauê Dias Lipari
@@ -8,6 +8,7 @@
         <ul>
             <li><a routerLink="/">Home</a></li>
             <li><a routerLink="/contato">Contato</a></li>
+            <li><a routerLink="/projetos">Projetos</a></li>
         </ul>
     </div>
 </footer>
