--- a/src/app/pagina-contato/pagina-contato.component.html
+++ b/src/app/pagina-contato/pagina-contato.component.html
@@ -10,8 +10,8 @@
         </div>
         <div class="botao-contatos">
             <ul>
-                <li><a href="https://www.linkedin.com/in/kauê-dias-lipari-a76743210/">LinkedIn</a><li>
-                <li><a href="https://github.com/Kaue-Dias-Lipari">GitHub</a><li>
+                <li><a href="https://www.linkedin.com/in/kauê-dias-lipari-a76743210/" target="_blank" rel="noopener noreferrer">LinkedIn</a><li>
+                <li><a href="https://github.com/Kaue-Dias-Lipari" target="_blank" rel="noopener noreferrer">GitHub</a><li>
             </ul>
         </div>
     </div>
