--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -12,6 +12,10 @@
     justify-content: space-around;
     background-color: rgb(78, 155, 255);
     height: 80px;
+    top: 0;
+    position: fixed;
+    width: 100%;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.8);
 }
 
 .cabecalho-container div h1 {
