--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,5 +5,6 @@
     <ul class="menu">
         <li><a routerLink="/">Home</a></li>
         <li><a routerLink="/contato">Contato</a></li>
+        <li><a routerLink="/projetos">Projetos</a></li>
     </ul>
 </header>
