Corrige erros de ortografia

--- a/src/app/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/pagina-inicial/pagina-inicial.component.html
@@ -6,8 +6,8 @@
         <div class="texto-bem-vindo">
             <h2>Seja bem-vindo!</h2>
             <p>
-                Olá, tudo bem com você? se você está aqui, acredito que está interessado em saber quem eu sou,
-                o que eu sei fazer e tudo sobre mim, então fique a vontade para desfrutar desse site que eu mesmo fiz.
+                Olá, tudo bem com você? Se você está aqui, acredito que está interessado em saber quem eu sou,
+                o que eu sei fazer e tudo sobre mim. Então fique a vontade para desfrutar desse site que eu mesmo fiz.
             </p>
         </div>
     </div>
@@ -16,9 +16,9 @@
         <div class="texto-quem-sou-eu">
             <h3>Quem sou eu?</h3>
             <p>
-                Me chamo Kauê Dias Lipari, tenho 18 anos, como você já deve ter imaginado, sou um entusiasta
-                da tecnologia, estou cursando análise e desenvolvimento de sistemas na Anhembi morumbi, duas das minhas
-                paixões são programar e empreender, estou em busca de me desenvolver cada vez mais, sempre aprendendo
+                Me chamo Kauê Dias Lipari, tenho 18 anos, como já devem ter imaginado, sou um entusiasta
+                da tecnologia. Estou cursando análise e desenvolvimento de sistemas na Anhembi Morumbi, duas das minhas
+                paixões são programar e empreender; estou em busca de me desenvolver cada vez mais, sempre aprendendo
                 e colocando em prática.
             </p>
         </div>
