--- a/src/app/pagina-contato/pagina-contato.component.html
+++ b/src/app/pagina-contato/pagina-contato.component.html
@@ -19,7 +19,7 @@
                     <input type="email" name="email" placeholder="exemplo@exemplo.com" required>
                 </div>
                 <div class="celular">
-                    <label>Celualar</label>
+                    <label>Celular</label>
                     <input type="number" name="number" placeholder="(XX) XXXXX-XXXX">
                 </div>
             </div>
@@ -41,8 +41,8 @@
             <h3>Minhas informações de contato:</h3>
             <div class="infos">
                 <div class="botoes-redes-sociais">
-                    <a href="https://github.com/Kaue-Dias-Lipari">Github</a>
-                    <a href="linkedin.com/in/kauê-dias-lipari-a76743210">LinkedIn</a>
+                    <a href="https://github.com/Kaue-Dias-Lipari" target="_blank" rel="noopener noreferrer">Github</a>
+                    <a href="linkedin.com/in/kauê-dias-lipari-a76743210" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 </div>
                 <div class="cel-email">
                     <p>Celular: (11) 99450-4190</p>
